# py-gtfs-duckdb

./: .gitignore  README.md  csv2ddb.py  gtfs2ddb.sh  gtfsduckdb-realtime.yaml  gtfslake-realtime.yaml  gtfslake.py  pyproject.toml  requirements.txt  routes_mapping.csv  stops_mapping.csv
.github/workflows/: build-release-tag.yaml
docs/: COMMANDS.md  REALTIME.md  STRATEGY.md
gtfslake/: __main__.py  csvddb.py  ddbdef.py  implementation.py  lake.py  realtime.py  repeatedtimer.py
gtfslake/adapter/: gtfsrt.py
schema/: create_agency.sql  create_calendar.sql  create_calendar_dates.sql  create_feed_info.sql  create_routes.sql  create_shapes.sql  create_stop_times.sql  create_stops.sql  create_transfers.sql  create_trips.sql
src/gtfsduckdb/: __main__.py  config.py  ddb.py  ddbdef.py  dict2xml.py  mapping.py  realtime.py
src/gtfsduckdb/adapter/: gtfsrt.py
src/gtfsduckdb/strategy/: match_stop_id.py
