[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygtfsduckdb"
description = "DuckDB implementation to process GTFS and GTFS-RT data"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "duckdb",
    "fastapi",
    "gtfs-realtime-bindings",
    "paho-mqtt",
    "polars",
    "protobuf",
    "pyarrow",
    "python-memcached",
    "pytz",
    "pyyaml",
    "uvicorn"
]
requires-python = ">=3.10"

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/gtfsduckdb/version.py"